--- a/src/Kanbas/Courses/CourseNavigation/index.css
+++ b/src/Kanbas/Courses/CourseNavigation/index.css
@@ -10,6 +10,7 @@
     width: 120px;
     padding: 0px;
     margin-left: 20px;
+    margin-right: 20px;
 }
 
 /*list items here*/
